@@ -8,6 +8,7 @@ import Model.Elements.Wall;
 import Model.Position;
 
 import javax.imageio.ImageIO;
+import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.*;
 import java.nio.file.Files;
@@ -21,7 +22,8 @@ import static com.google.common.base.Charsets.UTF_8;
 public class LevelLoader {
     Integer xBoundary = null;
     Integer yBoundary = null;
-    BufferedImage bi = null;
+    BufferedImage wallBackground = null;
+    BufferedImage background = null;
 
     Player player1;
     Player player2;
@@ -30,6 +32,18 @@ public class LevelLoader {
     List<Key> keys = new ArrayList<>();
     List<Monster> monsters = new ArrayList<>();
     List<Trap> traps = new ArrayList<>();
+
+    private BufferedImage cropFromWallBackgroundImage(int xPos, int yPos, int width, int height) {
+        return wallBackground.getSubimage(xPos, yPos, width, height);
+    }
+
+    public static BufferedImage resizeImage(BufferedImage originalImage, int width, int height) {
+        BufferedImage resizedImage = new BufferedImage(width, height,BufferedImage.TYPE_INT_ARGB);
+        Graphics2D g = resizedImage.createGraphics();
+        g.drawImage(originalImage, 0, 0, width, height, null);
+        g.dispose();
+        return resizedImage;
+    }
 
     private void readLevelSize(BufferedReader br) throws IOException {
         String line = br.readLine();
@@ -40,12 +54,15 @@ public class LevelLoader {
 
         List<String> parts = Splitter.on(',').splitToList(line);
 
-        if (parts.size() != 3) {
+        if (parts.size() != 4) {
             throw new IOException("Level size needs to be like: x,y,imagePath");
         } else {
             xBoundary = Integer.parseInt(parts.getFirst());
             yBoundary = Integer.parseInt(parts.get(1));
-            bi = ImageIO.read(new File(parts.get(2)));
+            wallBackground = ImageIO.read(new File(parts.get(2)));
+            background = ImageIO.read(new File(parts.get(3)));
+            wallBackground = resizeImage(wallBackground,xBoundary,yBoundary);
+            background = resizeImage(background,xBoundary,yBoundary);
         }
     }
 
@@ -109,10 +126,14 @@ public class LevelLoader {
 
     private void readWall(String line) throws IOException {
         List<String> parts = Splitter.on(',').splitToList(line);
-        if (parts.size() != 5) {
+        if (parts.size() != 4) {
             throw new IOException("Wall specification needs to be like: x,y,sizeX,sizeY,imagePath");
         }
-        this.walls.add(new Wall(new Position(Integer.parseInt(parts.get(0)), Integer.parseInt(parts.get(1))), ImageIO.read(new File(parts.get(4))), Integer.parseInt(parts.get(2)), Integer.parseInt(parts.get(3))));
+        int xPos = Integer.parseInt(parts.getFirst());
+        int yPos = Integer.parseInt(parts.get(1));
+        int width = Integer.parseInt(parts.get(2));
+        int height = Integer.parseInt(parts.get(3));
+        this.walls.add(new Wall(new Position(xPos,yPos), cropFromWallBackgroundImage(xPos,yPos,width,height), width, height));
     }
 
     public Level loadLevel(String levelName) {
@@ -166,6 +187,6 @@ public class LevelLoader {
         } catch (IOException e) {
             System.out.println("Error while trying to load level");
         }
-        return new Level(walls, this.monsters, this.traps,this.keys, this.player1, this.player2, this.xBoundary, this.yBoundary);
+        return new Level(walls, this.monsters, this.traps,this.keys, this.player1, this.player2, this.xBoundary, this.yBoundary, this.background);
     }
 }
